--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -44,11 +44,10 @@ jobs:
 
       - name: Update package index and install dependencies
         run: |
-          pip install --upgrade pip
-          pip install setuptools==65.5.0 wheel
-          pip install --no-use-pep517 ibm-cloud-sdk-core==3.20.3
-          pip install --upgrade setuptools
+          pip install --upgrade pip setuptools wheel
+          pip install --no-build-isolation ibm-cloud-sdk-core==3.20.3
           poetry run pip install --upgrade pip setuptools wheel
+          poetry install --no-root --with dev
           poetry install --with dev 
           poetry install -E google -E watson -E polly -E microsoft -E googletrans -E witai -E elevenlabs
           poetry run postinstall
