--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -3,12 +3,12 @@ name: Build, Test, and Publish
 on:
   push:
     branches:
-      - master
+      - main
     tags:
       - 'v*.*.*'
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build-and-test:
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.10", "3.11", "3.12"]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -44,8 +44,6 @@ jobs:
 
       - name: Update package index and install dependencies
         run: |
-          pip install --upgrade pip setuptools wheel
-          poetry run pip install --upgrade pip setuptools wheel
           poetry install --with dev 
           poetry install -E google -E watson -E polly -E microsoft -E googletrans -E witai -E elevenlabs
           poetry run postinstall
