--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -26,6 +26,17 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/pypoetry
+            ~/.cache/pip
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-
+
+              
       - name: Install system dependencies on Linux
         if: matrix.os == 'ubuntu-latest'
         run: |
@@ -143,6 +154,27 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: dist-${{ matrix.os }}-${{ matrix.python-version }}
+
+      - name: Run synthetic tests on TTS services
+        env:
+          WATSON_API_KEY: ${{ secrets.WATSON_API_KEY }}
+          WATSON_API_URL: ${{ secrets.WATSON_API_URL }}
+          WATSON_REGION: ${{ secrets.WATSON_REGION }}
+          WATSON_INSTANCE_ID: ${{ secrets.WATSON_INSTANCE_ID }}
+          MICROSOFT_TOKEN: ${{ secrets.MICROSOFT_TOKEN }}
+          MICROSOFT_REGION: ${{ secrets.MICROSOFT_REGION }}
+          POLLY_REGION: ${{ secrets.POLLY_REGION }}
+          POLLY_AWS_KEY_ID: ${{ secrets.POLLY_AWS_KEY_ID }}
+          POLLY_AWS_ACCESS_KEY: ${{ secrets.POLLY_AWS_ACCESS_KEY }}
+          ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_API_KEY }}
+          WITAI_TOKEN: ${{ secrets.WITAI_TOKEN }}
+          GOOGLE_SA_PATH: ${{ secrets.GOOGLE_SA_PATH }}
+          GOOGLE_SA_FILE_B64: ${{ secrets.GOOGLE_SA_FILE_B64 }}
+        run: |
+          poetry install --with dev
+          poetry install -E google -E watson -E polly -E microsoft -E googletrans -E witai -E elevenlabs
+          poetry run postinstall
+          poetry run pytest -m "synthetic"
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
