--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -135,7 +135,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: build-and-test
-    if: startsWith(github.ref, 'refs/tags/')
+    # if: startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -144,6 +144,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+
+      - name: Create dist directory
+        run: mkdir -p dist
 
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2.0.0
@@ -154,6 +157,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: dist-*
+          path: dist
+
+      - name: List contents of dist after download
+        run: ls -R dist
 
       # - name: Run synthetic tests on TTS services
       #   env:
