--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -107,7 +107,7 @@ jobs:
         run: pip install uv
 
       - name: Install dependencies
-        run: uv sync --dev --extra google --extra watson --extra polly --extra microsoft --extra googletrans --extra witai --extra elevenlabs --extra systemtts --extra controlaudio --extra sherpaonnx
+        run: uv sync --group dev --extra google --extra watson --extra polly --extra microsoft --extra googletrans --extra witai --extra elevenlabs --extra systemtts --extra controlaudio --extra sherpaonnx
 
       - name: Run tests with coverage
         run: uv run pytest --cov=tts_wrapper -m "not synthetic"
