--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ systemtts = ["pyttsx3>=2.98"]
 uwp = ["winrt-runtime>=2.0.1; sys_platform == 'win32'"]
 sherpaonnx = ["sherpa-onnx>=1.10.17", "requests>=2.31.0", "numpy>=1.24.3"]
 googletrans = ["gTTS>=2.5.2"]
+edgetts = ["aiohttp>=3.8.0,<4.0.0", "typing-extensions>=4.1.0,<5.0.0"]
 controlaudio = ["pyaudio>=0.2.14"]
 espeak = []
 
