--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -99,12 +99,12 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y espeak-ng
+          sudo apt-get install -y portaudio19-dev libttspico-utils ffmpeg espeak-ng
 
       - name: Install eSpeak NG on macOS
         if: matrix.os == 'macos-latest'
         run: |
-          brew install espeak-ng
+          brew install portaudio ffmpeg espeak-ng
 
       - name: Install eSpeak NG on Windows
         if: matrix.os == 'windows-latest'
