--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["tts_wrapper"]
+include = ["tts_wrapper/engines/avsynth/SpeechBridge"]
 
 [tool.hatch.version]
 source = "uv-dynamic-versioning"
@@ -66,6 +67,7 @@ style = "semver"
 
 [project.scripts]
 postinstall = "tts_wrapper.preinstall:main"
+build_avsynth = "tts_wrapper.engines.avsynth.setup:build_swift_bridge"
 
 [tool.pytest.ini_options]
 markers = [
