--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -51,7 +51,7 @@ jobs:
         run: pip install uv
 
       - name: Install dependencies
-        run: uv sync --group dev --extra google --extra watson --extra polly --extra microsoft --extra googletrans --extra witai --extra elevenlabs --extra systemtts --extra controlaudio --extra sherpaonnx --extra espeak
+        run: uv sync --group dev --extra google --extra watson --extra polly --extra microsoft --extra googletrans --extra witai --extra elevenlabs --extra controlaudio --extra sherpaonnx --extra espeak --extra sapi --extra avsynth
 
       - name: Run postinstall script
         run: uv run postinstall
@@ -133,7 +133,7 @@ jobs:
         run: pip install uv
 
       - name: Install dependencies
-        run: uv sync --group dev --extra google --extra watson --extra polly --extra microsoft --extra googletrans --extra witai --extra elevenlabs --extra systemtts --extra controlaudio --extra sherpaonnx
+        run: uv sync --group dev --extra google --extra watson --extra polly --extra microsoft --extra googletrans --extra witai --extra elevenlabs --extra sapi --extra avsynth --extra controlaudio --extra sherpaonnx
 
       - name: Run tests with coverage
         run: |
