--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           node-version: 18
           cache: yarn
+          cache-dependency-path: website/yarn.lock
 
       - name: Install dependencies
         run: |
