--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -4,11 +4,19 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'website/**'
+      - 'docs/**'
+      - '*.md'
     tags:
       - 'v*.*.*'
   pull_request:
     branches:
       - main
+    paths-ignore:
+      - 'website/**'
+      - 'docs/**'
+      - '*.md'
 
 jobs:
   build:
@@ -73,10 +81,11 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.10", "3.11", "3.12"]
     env:
-      WATSON_API_KEY: ${{ secrets.WATSON_API_KEY }}
-      WATSON_API_URL: ${{ secrets.WATSON_API_URL }}
-      WATSON_REGION: ${{ secrets.WATSON_REGION }}
-      WATSON_INSTANCE_ID: ${{ secrets.WATSON_INSTANCE_ID }}
+      # Only set Watson credentials for releases
+      WATSON_API_KEY: ${{ startsWith(github.ref, 'refs/tags/') && secrets.WATSON_API_KEY || '' }}
+      WATSON_API_URL: ${{ startsWith(github.ref, 'refs/tags/') && secrets.WATSON_API_URL || '' }}
+      WATSON_REGION: ${{ startsWith(github.ref, 'refs/tags/') && secrets.WATSON_REGION || '' }}
+      WATSON_INSTANCE_ID: ${{ startsWith(github.ref, 'refs/tags/') && secrets.WATSON_INSTANCE_ID || '' }}
       MICROSOFT_TOKEN: ${{ secrets.MICROSOFT_TOKEN }}
       MICROSOFT_REGION: ${{ secrets.MICROSOFT_REGION }}
       POLLY_REGION: ${{ secrets.POLLY_REGION }}
@@ -140,13 +149,14 @@ jobs:
       - name: Run tests with coverage
         run: |
           if [ "$RUNNER_OS" = "Windows" ]; then
-            uv run pytest --cov=tts_wrapper -m "not synthetic"
+            uv run pytest --cov=tts_wrapper -m "not synthetic and not watson"
           else
-            uv run pytest --cov=tts_wrapper -m "not synthetic and not sapi"
+            uv run pytest --cov=tts_wrapper -m "not synthetic and not sapi and not watson"
           fi
         shell: bash
 
-      - name: Run all tests with Makefile
+      - name: Run all tests including Watson (on release only)
+        if: startsWith(github.ref, 'refs/tags/')
         run: uv run make tests
         shell: bash
 
