--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -41,7 +41,6 @@ jobs:
           $espeakPath = "C:\Program Files\eSpeak NG"
           echo "PATH=$env:PATH;$espeakPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8
 
-      
       - name: Verify eSpeak NG Installation
         run: espeak-ng --version
 
@@ -81,11 +80,10 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.10", "3.11", "3.12"]
     env:
-      # Only set Watson credentials for releases
-      WATSON_API_KEY: ${{ startsWith(github.ref, 'refs/tags/') && secrets.WATSON_API_KEY || '' }}
-      WATSON_API_URL: ${{ startsWith(github.ref, 'refs/tags/') && secrets.WATSON_API_URL || '' }}
-      WATSON_REGION: ${{ startsWith(github.ref, 'refs/tags/') && secrets.WATSON_REGION || '' }}
-      WATSON_INSTANCE_ID: ${{ startsWith(github.ref, 'refs/tags/') && secrets.WATSON_INSTANCE_ID || '' }}
+      WATSON_API_KEY: ${{ secrets.WATSON_API_KEY }}
+      WATSON_API_URL: ${{ secrets.WATSON_API_URL }}
+      WATSON_REGION: ${{ secrets.WATSON_REGION }}
+      WATSON_INSTANCE_ID: ${{ secrets.WATSON_INSTANCE_ID }}
       MICROSOFT_TOKEN: ${{ secrets.MICROSOFT_TOKEN }}
       MICROSOFT_REGION: ${{ secrets.MICROSOFT_REGION }}
       POLLY_REGION: ${{ secrets.POLLY_REGION }}
