--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ name = "py3-tts-wrapper"
 dynamic = ["version"]
 description = "TTS-Wrapper makes it easier to use text-to-speech APIs by providing a unified and easy-to-use interface."
 authors = [
-    {name = "Giulio Bottari", email = "giuliobottari@gmail.com"},
-    {name = "Will Wade", email = "willwade@gmail.com"}
+    {name = "Will Wade", email = "willwade@gmail.com"},
+    {name = "Giulio Bottari", email = "giuliobottari@gmail.com"}
 ]
 license = "MIT"
 readme = "README.md"
@@ -47,6 +47,7 @@ sapi = ["comtypes>=1.4.8; sys_platform == 'win32'"]
 controlaudio = ["pyaudio>=0.2.14"]
 espeak = []  # No additional dependencies as espeak-ng needs to be installed system-wide
 avsynth = []  # No additional dependencies as it uses built-in Swift bridge
+openai = ["openai"]
 
 [project.urls]
 "Bug Tracker" = "https://github.com/willwade/tts-wrapper/issues"
