--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "soundfile>=0.12.1",
     "numpy>=1.24.3",
     "pymp3>=0.2.0",
-    "langcodes"
+    "langcodes",
+    "language-data>=1.3.0",
+    "marisa-trie>=1.2.1",
 ]
 
 [dependency-groups]
